--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,8 @@
   --body-color: rgb(19, 20, 13);
   --container-color: rgb(29, 29, 32);
   --shadow-img: 0 0 48px rgba(191, 80, 49, 0.4);
+  --gallery-img: 0 0 20px rgba(191, 80, 49, 0.4);
+  --button-img: 0 0 20px rgba(191, 80, 49, 15);
   --gradient-card: linear-gradient(180deg,
       hsla(93, 8%, 8%),
       rgb(184, 92, 49));
@@ -232,6 +234,7 @@ img {
   background: linear-gradient(to bottom,
       rgba(19, 20, 13, 1) 0%,
       rgba(19, 20, 13, 1) 40%,
+      rgba(19, 20, 13, 0.8) 60%,
       rgba(19, 20, 13, 0) 100%);
   z-index: var(--z-fixed);
 }
@@ -317,6 +320,7 @@ img {
 
 .nav-link:hover {
   color: var(--first-color);
+  filter: drop-shadow(var(--button-img));
 }
 
 .nav-close {
@@ -359,7 +363,7 @@ img {
 
 /*=============== HOME ===============*/
 .home,
-.about {
+.about, .contact {
   position: relative;
   min-height: 100vh;
   overflow: hidden;
@@ -370,28 +374,6 @@ img {
 
   background-size: 100% 50%, cover;
   background-position: bottom center, center;
-  background-repeat: no-repeat, no-repeat;
-}
-
-.contact {
-  position: relative;
-  min-height: 100vh;
-  overflow: hidden;
-
-  /* Top layer: hides the image in the center; fades outwards */
-  background-image:
-    radial-gradient(circle at center,
-      var(--body-color) 0%,
-      var(--body-color) 30%,
-      /* solid center radius */
-      rgba(19, 20, 13, 0) 60%
-      /* fade to transparent */
-    ),
-    url("../img/Background.png");
-
-  background-size: 100% 100%, cover;
-  /* gradient spans section; image covers */
-  background-position: center, center;
   background-repeat: no-repeat, no-repeat;
 }
 
@@ -442,7 +424,7 @@ img {
   aspect-ratio: 4 / 3;
   /* controls card size consistently */
   border: 3px solid var(--first-color);
-  filter: drop-shadow(var(--shadow-img));
+  filter: drop-shadow(var(--gallery-img));
 }
 
 /* Image (anchor focus to the bottom center) */
@@ -829,6 +811,22 @@ img {
   width: 2.5rem;
   height: 2.5rem;
 }
+
+/*=============== WORK ===============*/
+.work {
+  position: relative;
+  min-height: 50vh;
+  overflow: hidden;
+
+  background-image:
+    linear-gradient(to top, rgba(19, 20, 13, 1), rgba(19, 20, 13, 0)),
+    url("../img/Background.png");
+
+  background-size: 100% 50%, cover;
+  background-position: bottom center, center;
+  background-repeat: no-repeat, no-repeat;
+}
+
 
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar {
