--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -359,7 +359,8 @@ img {
 
 /*=============== HOME ===============*/
 .home,
-.about, .contact {
+.about,
+.contact {
   position: relative;
   min-height: 100vh;
   overflow: hidden;
@@ -577,7 +578,6 @@ img {
 /*Pictures*/
 .picture-gallery {
   align-items: center;
-  padding-top: 3rem;
   padding-bottom: 2rem;
   justify-content: center;
 }
@@ -598,12 +598,6 @@ img {
   object-fit: cover;
   border-radius: 0rem;
   display: block;
-}
-
-.picture-container img {
-  border-radius: 1rem;
-  justify-self: center;
-  width: 360px;
 }
 
 .picture-title {
@@ -842,8 +836,14 @@ img {
   align-items: center;
   text-align: center;
   gap: 3rem;
+  padding-top: 5rem;
 }
 
+.work-img {
+  border-radius: 2rem;
+  border: 3px solid var(--first-color);
+  filter: drop-shadow(var(--gallery-img));
+}
 
 
 /*=============== SCROLL BAR ===============*/
@@ -1012,7 +1012,7 @@ img {
   }
 
   .section {
-    padding-block: 5rem 7rem;
+    padding-block: 5rem 5rem;
   }
 
   .section-title {
