--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -368,7 +368,7 @@ img {
 
   background-image:
     linear-gradient(to top, rgba(19, 20, 13, 1), rgba(19, 20, 13, 0)),
-    url("../img/Background.png");
+    url("../img/background.png");
 
   background-size: 100% 50%, cover;
   background-position: bottom center, center;
@@ -861,15 +861,15 @@ img {
 }
 
 .icon-facebook {
-  --icon: url("assets/img/facebook-icon.svg");
+  --icon: url("../img/facebook-icon.svg");
 }
 
 .icon-instagram {
-  --icon: url("assets/img/instagram-icon.svg");
+  --icon: url("../img/instagram-icon.svg");
 }
 
 .icon-linkedin {
-  --icon: url("assets/img/linkedin-icon.svg");
+  --icon: url("../img/linkedin-icon.svg");
 }
 
 .footer-social .footer-social-link {
